--- a/Arbol_De_Amor-main/Css/style.css
+++ b/Arbol_De_Amor-main/Css/style.css
@@ -3,7 +3,8 @@ body {
     padding: 0;
     width: 100vw;
     height: 100vh;
-    overflow: hidden;
+    overflow-x: hidden; 
+    overflow-y: auto;
     background: #a5deec;
 }
 
