--- a/Arbol_De_Amor-main/Css/style.css
+++ b/Arbol_De_Amor-main/Css/style.css
@@ -2,7 +2,8 @@ body {
     margin: 0;
     padding: 0;
     width: 100vw;
-    height: 100vh;
+    min-height: 100vh;
+    height: auto;
     overflow-x: hidden; 
     overflow-y: auto;
     background: #a5deec;
@@ -69,11 +70,11 @@ body {
 }
 
 .dedication-text {
-  position: absolute;
-  top: 50%;
-  left: 3%;
-  right: auto;
-  transform: translateY(-50%);
+position: relative;   /* antes absolute */
+  margin: 5% 0 5% 3%;
+  top: auto;
+  left: auto;
+  transform: none;
   min-width: 320px;
   max-width: 600px;
   width: 60rem;
