--- a/Arbol_De_Amor-main/Css/style.css
+++ b/Arbol_De_Amor-main/Css/style.css
@@ -83,7 +83,7 @@ body {
 
   z-index: 3;
   opacity: 0;
-  pointer-events: none;
+  pointer-events: auto;
 
   padding: 1.5em;
   background: rgba(99, 167, 223, 0.92);
